--- a/resources/assets/less/advanced_search.less
+++ b/resources/assets/less/advanced_search.less
@@ -1,3 +1,4 @@
+@import "common/bootstrap-values";
 
 
 #sidebar {
@@ -6,56 +7,80 @@
 
 .sidebar-nav {
     list-style: none;
-    li a {
-        display: block;
-        text-decoration: none;
-        color: #333;
-    }
 
-    li a:hover {
-        text-decoration: none;
-        color: #ffffff;
-        background: #95a5a6;
+    li {
+        a {
+            display: block;
+            text-decoration: none;
+            color: #333;
+        }
+
+        a:hover {
+            text-decoration: none;
+            color: #ffffff;
+            background: #95a5a6;
+        }
+
+        a:active, a:focus {
+            text-decoration: none;
+        }
     }
 
     h5 {
         font-weight: bold;
         font-size: 110%;
     }
+
 }
-
-
-
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-
 
 .location, .condition, .category, .format, .price {
     margin-top: 5%;
 }
 
-#main li{
-    margin-top: 2%;
+
+
+.auction-item  {
+    padding-top: 1rem;
+    margin-top: 1rem;
     border: solid transparent;
     border-top-color: #ddd;
-}
 
-ul {
-    list-style-type: none;
-}
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 
-#img{
-    margin-left: 10%;
-}
+    p, h4 {
+        margin-bottom: 0.5rem;
+    }
 
-@media (max-width: 500px) {
-    #page-body-section > button{
+    .auction-image {
+        width: 10rem;
+    }
+
+    .auction-text {
+        margin-left: 3rem;
         width: 100%;
+        padding-right: 2rem;
     }
 }
 
 .priceResult{
     font-weight: bold;
 }
+
+.auction-item:first-child {
+    border: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+
+@media @d-xs {
+    #page-body-section > button{
+        width: 100%;
+    }
+}
+
