implement search load more, delete unused files

--- a/resources/assets/less/advanced_search.less
+++ b/resources/assets/less/advanced_search.less
@@ -16,6 +16,7 @@
 
 }
 
+
 .sidebar-nav {
     list-style: none;
 
@@ -110,9 +111,7 @@
     border: none;
 }
 
-.auction-item:last-child {
-    margin-bottom: 7rem;
-}
+
 
 .priceResult{
     font-weight: bold;
@@ -131,3 +130,19 @@ ul {
     }
 }
 
+#load-more-div {
+    width: 100%;
+    margin-bottom: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+
+#load-more {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#no-more-auctions {
+    display: none;
+}
