--- a/resources/assets/less/advanced_search.less
+++ b/resources/assets/less/advanced_search.less
@@ -132,6 +132,7 @@ ul {
 
 #load-more-div {
     width: 100%;
+    margin-top: 3rem;
     margin-bottom: 5rem;
     display: flex;
     justify-content: center;
