--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -42,6 +42,10 @@
     color: #464242;
 }
 
+.openedMessage {
+    background-color: #c9c9c9;
+}
+
 
 @media (max-width: 767.98px) {
     .table th, .table td {
