--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -22,7 +22,7 @@
 
 .table tbody th input, .table tbody th a:nth-child(2) {
     margin-right: 1rem;
-} 
+}
 
 .navbar-nav a:hover {
     text-decoration: none;
@@ -32,8 +32,7 @@
 
 }
 
-.navbar-nav {
-    font-size: large;
+.active {
     font-weight: bold;
 }
 
