--- a/public/css/auction.css
+++ b/public/css/auction.css
@@ -17,7 +17,10 @@ input[type=number] {
     color: green;
 }
 
-
+#wishlist-button{
+    background-color: white;
+    border: 2px solid grey
+}
 
 #button-bid-color {
     background-color: #00509d;
