Checklist - os ficheiros css estáticos foram minificados e comprimidos

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,56 +1,1 @@
-/* // Small devices (landscape phones, 576px and up) */
-@media (max-width: 767px) {
-    #qAndA > button{
-        width: 100%;
-    }
-}
-
-#closebtn{
-    background-color: #464242;
-}
-
-#sendmsg{
-    background-color: #18bc9c;
-    color:  #464242;
-    border-color:  #464242;
-}
-
-#delete{
-    border-color:  #464242;
-    color:  whitesmoke;
-}
-
-.table tbody th input, .table tbody th a:nth-child(2) {
-    margin-right: 1rem;
-}
-
-.navbar-nav a:hover {
-    text-decoration: none;
-    color: #ffffff;
-    background: #0df1d1;
-    font-weight: bold;
-
-}
-
-.active {
-    font-weight: bold;
-}
-
-#sendbtn{
-    background-color: #18bc9c;
-    color: #464242;
-}
-
-.openedMessage {
-    background-color: #f2f4f4;
-    font-weight: bold;
-}
-
-
-@media (max-width: 767.98px) {
-    .table th, .table td {
-        padding-left: 6px;
-        padding-right: 6px;
-    }
-}
-
+#delete,#sendmsg{border-color:#464242}.active,.openedMessage{font-weight:700}@media (max-width:767px){#qAndA>button{width:100%}}#closebtn{background-color:#464242}#sendmsg{background-color:#18bc9c;color:#464242}#delete{color:#f5f5f5}.table tbody th a:nth-child(2),.table tbody th input{margin-right:1rem}.navbar-nav a:hover{text-decoration:none;color:#fff;background:#0df1d1;font-weight:700}#sendbtn{background-color:#18bc9c;color:#464242}.openedMessage{background-color:#f2f4f4}@media (max-width:767.98px){.table td,.table th{padding-left:6px;padding-right:6px}}
