--- a/public/css/authentication.css
+++ b/public/css/authentication.css
@@ -1,13 +1,1 @@
-/* md, lg, xl devices */
-@media (min-width: 768px) {
-  #login {
-    width: 25rem;
-  }
-  #user_form {
-    width: 30rem;
-  }
-}
-#profile-avatar {
-  max-height: 10em;
-  margin-bottom: 0.5em;
-}
+@media (min-width:768px){#login{width:25rem}#user_form{width:30rem}}#profile-avatar{max-height:10em;margin-bottom:.5em}
