--- a/public/css/message.css
+++ b/public/css/message.css
@@ -1,25 +1,1 @@
-.navbar-nav a:hover {
-    text-decoration: none;
-    color: #ffffff;
-    background: #0df1d1;
-
-}
-
-.active{
-    font-weight: bold;
-}
-
-#closebtn{
-    background-color: #464242;
-}
-
-.sendmsg{
-    background-color: #18bc9c;
-    color:  whitesmoke;
-    border-color:  #464242;
-}
-
-#delete{
-    border-color:  #464242;
-    color:  whitesmoke;
-}
+.navbar-nav a:hover{text-decoration:none;color:#fff;background:#0df1d1}#delete,.sendmsg{border-color:#464242;color:#f5f5f5}.active{font-weight:700}#closebtn{background-color:#464242}.sendmsg{background-color:#18bc9c}
