--- a/public/css/report.css
+++ b/public/css/report.css
@@ -1,12 +1,1 @@
-/* // Small devices (landscape phones, 576px and up) */
-@media (max-width: 767px) {
-    #qAndA > button{
-        width: 100%;
-    }
-}
-
-
-#sendbtn{
-    background-color: #18bc9c;
-    color:white;
-}
+@media (max-width:767px){#qAndA>button{width:100%}}#sendbtn{background-color:#18bc9c;color:#fff}
