--- a/Netrow/src/global-style.scss
+++ b/Netrow/src/global-style.scss
@@ -6,12 +6,12 @@
 @charset "utf-8";
 
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
 // Set your brand colors
 $brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
+$beige-light: #d0d1cd;
+$beige-lighter: #eff0eb;
 $white: #ffffff;
 
 // Update Bulma's global variables
@@ -44,6 +44,13 @@ $navbar-background-color: $white;
  */
 
 // card style
-.card-content  {
-    padding: 5px;
+.card-content {
+  padding: 5px;
+}
+
+body > div {
+  min-height: 100vh;
+}
+body > div > div:nth-child(2) {
+  min-height: calc(100vh - 13rem - 3.25rem);
 }
