Started profiled user page

--- a/src/visualization/templates/statistics.html
+++ b/src/visualization/templates/statistics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Profile Anyone</title>
+<title>Profile Anyone - Statistics</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,8 +10,6 @@
 <style>
     body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-    .fa-twitter {font-size:200px}
-    .fa-users {font-size: 150px}
 </style>
 <body>
 
