--- a/src/visualization/templates/user.html
+++ b/src/visualization/templates/user.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Profiling {{ author }}</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
-    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+<head>
+    <title>Profiling {{ author }}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../static/two.js" type='text/javascript'></script>
+    <style>
+        body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
+        .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-gap: 10px;
-        padding: 10px;
-    }
+        .grid-container {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-gap: 10px;
+            padding: 10px;
+        }
 
-    .col-sm-3 p {
-        text-align: justify;
-        text-align-last: left;
-    }
-</style>
+        .col-sm-3 p {
+            text-align: justify;
+            text-align-last: left;
+        }
+    </style>
+</head>
 <body>
 
 <!-- Navbar -->
@@ -42,7 +45,7 @@
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:128px 16px">
     <div class="grid-container">
-        <div class="col-sm-3">
+        <div class="col-sm-6" style="margin-left: 200px;">
             <p>
             <h4> Profiling @{{ data['username'] }}</h4>
                 <i class="fa fa-user w3-margin-right"></i> Gender: {{ data['gender'] }}
@@ -67,12 +70,16 @@
             </label>
         </div>
         <div class="col-sm-3">
-            <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
+            <div id="percentages">
+
+            </div>
+            <div>
+
+            </div>
         </div>
     </div>
 </header>
 
-<!-- Second Grid -->
 <script>
     // Used to toggle the menu on small screens when clicking on the menu button
     function myFunction() {
@@ -83,6 +90,39 @@
             x.className = x.className.replace(" w3-show", "");
         }
     }
+</script>
+
+<script>
+    let elem = document.getElementById('percentages');
+    let two = new Two({ width: 585, height: 400 }).appendTo(elem);
+    let percentage = 50, percentage2 = 100 - percentage;
+    let percentage1Text = document.createElement("p");
+    let percentage2Text = document.createElement("p");
+    percentage1Text.innerText = percentage + "%";
+    percentage2Text.innerText = percentage2 + "%";
+    elem.appendChild(percentage1Text);
+    elem.appendChild(percentage2Text);
+
+    let rect1 = two.makeRectangle(-100, 0, 150, 400);
+    let rect2 = two.makeRectangle(100, 0, 150, 400);
+    rect1.fill = '#FF8000';
+    rect1.stroke = 'orangered';
+    rect2.fill = 'rgba(0, 200, 255, 0.75)';
+    rect2.stroke = '#1C75BC';
+
+    // Groups can take an array of shapes and/or groups.
+    let group = two.makeGroup(rect1, rect2);
+
+    // And have translation, rotation, scale like all shapes.
+    group.translation.set(two.width / 4, two.height / 2);
+    group.rotation = Math.PI;
+    group.scale = 0.75;
+
+    // You can also set the same properties a shape have.
+    group.linewidth = 7;
+
+    two.update();
+
 </script>
 
 </body>
