Completed profiling user visualization without animations

--- a/src/visualization/templates/index.html
+++ b/src/visualization/templates/index.html
@@ -7,12 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
-    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-    .fa-twitter {font-size:200px}
-    .fa-users {font-size: 150px}
-</style>
+<link rel="stylesheet" href="../static/css/index.css">
+<script src="../static/js/nav.js" type='text/javascript'></script>
+
 <body>
 
 <!-- Navbar -->
@@ -80,18 +77,6 @@
         </div>
     </div>
 </div>
-
-<script>
-    // Used to toggle the menu on small screens when clicking on the menu button
-    function myFunction() {
-        let x = document.getElementById("navDemo");
-        if (x.className.indexOf("w3-show") === -1) {
-            x.className += " w3-show";
-        } else {
-            x.className = x.className.replace(" w3-show", "");
-        }
-    }
-</script>
 
 </body>
 </html>
