--- a/src/visualization/static/css/user.css
+++ b/src/visualization/static/css/user.css
@@ -1,6 +1,10 @@
 body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 
+.w3-bar {
+    background-color: dodgerblue;
+}
+
 .w3-container {
     position: absolute;
     top: 40px;
@@ -8,15 +12,19 @@ body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     width: 100%;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 10px;
-    padding: 10px;
+#categories {
+    position: absolute;
+    right: 231px;
+}
+
+#topics {
+    position: absolute;
+    right: 0;
+    margin: 2px 4px 0;
+    padding: 11px 24px!important;
 }
 
 #stats {
-    margin-left: 200px;
     margin-top: 100px;
 }
 
@@ -26,14 +34,15 @@ body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
 }
 
 .smaller-container {
-    display: grid;
+    height: 350px;
+    margin: auto;
     grid-template-columns: 300px;
     grid-template-rows: 350px 100px;
     grid-auto-flow: row;
 }
 
 #percentages {
-    grid-column: 1;
+    height: 350px;
 }
 
 #percentages-display {
