--- a/src/visualization/static/css/user.css
+++ b/src/visualization/static/css/user.css
@@ -5,6 +5,10 @@ body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     background-color: dodgerblue;
 }
 
+#statistics, #categories {
+    color: #fff!important;
+}
+
 .w3-container {
     position: absolute;
     top: 40px;
@@ -24,13 +28,25 @@ body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     padding: 11px 24px!important;
 }
 
-#stats {
+.w3-jumb {
     margin-top: 100px;
 }
 
-.col-sm-3 p {
-    text-align: justify;
-    text-align-last: left;
+#stats {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 400px 400px;
+    grid-template-rows: 50px 50px 50px;
+    grid-auto-flow: row;
+}
+
+#stats i {
+    text-align: right;
+}
+
+#stats p {
+    text-align: left;
+    margin: 0!important;
 }
 
 .smaller-container {
