Change colors and hide elements

--- a/src/visualization/templates/user.html
+++ b/src/visualization/templates/user.html
@@ -41,12 +41,12 @@
 <header class="w3-container w3-blue w3-center">
     <h2 class="w3-jumb"> Profiling @{{ username }}</h2>
         <div class="col-sm-3" id="stats">
-            <i class="fa fa-user w3-margin-right w3-xlarge"></i>
+             <!--<i class="fa fa-user w3-margin-right w3-xlarge"></i>
             <p class="w3-xlarge">Gender: </p>
             <i class="fa fa-location-arrow w3-margin-right w3-xlarge"></i>
             <p class="w3-xlarge">Location: </p>
             <i class="fa fa-twitter w3-margin-right w3-xlarge"></i>
-            <p class="w3-xlarge">Number of Tweets: </p>
+            <p class="w3-xlarge">Number of Tweets: </p>-->
             <p style="display: none" id="dataset">{{ data }}</p>
         </div>
         <div class="col-sm-3 smaller-container">
