Added statistic part in the website

--- a/src/visualization/static/css/user.css
+++ b/src/visualization/static/css/user.css
@@ -69,4 +69,5 @@ body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     display: inline;
     width: 50px;
     margin: 55px;
+    font-size: 25px;
 }
