Comment code and add statistics

--- a/src/visualization/templates/statistics.html
+++ b/src/visualization/templates/statistics.html
@@ -30,25 +30,30 @@
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-blue w3-center" style="padding:128px 16px">
+<header class="w3-container w3-blue w3-center" style="padding: 88px 16px;">
     <h2 class="w3-jumb"> Statistics of the dataset analysed </h2>
     <div class="grid-container">
         <div class="grid-item">
             <img src="../static/images/locationgraph.png" alt="Location Graph">
-            <figcaption>Location of the Users</figcaption>
-        </div>
-        <div class="grid-item">
-            <img src="../static/images/numberoffollowers.png" alt="Number of followers">
-            <figcaption>Number of followers per user</figcaption>
-        </div>
-        <div class="grid-item">
-            <img src="../static/images/numberoffriends.png" alt="Number of following">
-            <figcaption>Number of people following the user</figcaption>
+            <figcaption>The distribution of users in each continent.</figcaption>
         </div>
         <div class="grid-item">
             <img src="../static/images/tweetsyear.png" alt="Tweets per year">
             <figcaption>Tweets per year</figcaption>
         </div>
+        <div class="grid-item">
+            <img src="../static/images/numberoffollowers.png" alt="Number of followers">
+            <figcaption>Number of followers of the users</figcaption>
+        </div>
+        <div class="grid-item">
+            <img src="../static/images/numberoffriends.png" alt="Number of following">
+            <figcaption>Number of people following the users</figcaption>
+        </div>
+    </div>
+
+    <div class="grid-item">
+        <img src="../static/images/commonwords.png" alt="Location Graph">
+        <figcaption>Top 10 used words in the dataset</figcaption>
     </div>
 </header>
 
