Add topic modeling tab

--- a/src/visualization/templates/statistics.html
+++ b/src/visualization/templates/statistics.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/css/statistics.css">
-<script src="../static/js/nav.js" type='text/javascript'></script>
 <style>
     body,h1,h2,h3,h4,h5,h6,li {font-family: "Lato", sans-serif}
     .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
@@ -19,8 +18,9 @@
 <div class="w3-top">
     <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+        <a href="/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Statistics</a>
+        <a href="/modeling" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Topic Modeling</a>
     </div>
 
     <!-- Navbar on small screens -->
