--- a/src/visualization/templates/user.html
+++ b/src/visualization/templates/user.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/css/user.css">
-    <script src="../static/js/nav.js" type='text/javascript'></script>
     <script src="../static/js/two.js" type='text/javascript'></script>
     <script src="../static/js/user.js" type='text/javascript'></script>
 </head>
@@ -19,8 +18,9 @@
 <div class="w3-top">
     <div class="w3-bar w3-card w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+        <a href="/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
         <a href="/statistics" id="statistics" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Statistics</a>
+        <a href="/modeling" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Topic Modeling</a>
         <a class="w3-bar-item w3-hide-small w3-padding-large" id="categories" >Categories: </a>
         <label>
             <select class="w3-bar-item w3-hide-small" id="topics" name="Topics" onchange="select()">
