--- a/src/web_app/templates/index.html
+++ b/src/web_app/templates/index.html
@@ -38,42 +38,42 @@
             <div class="container">
                 <div class="checkbox">
                     <label class="switch" for="checkbox1">
-                        <input type="checkbox" id="checkbox1" name="state" value="extractor"/>
+                        <input type="checkbox" id="checkbox1" name="extractor" value="True"/>
                         <div class="slider round"></div>
                     </label>
                     <p>Extractor</p>
                 </div>
                 <div>
                     <label class="switch" for="checkbox2">
-                        <input type="checkbox" id="checkbox2" name="state" value="cleaner"/>
+                        <input type="checkbox" id="checkbox2" name="cleaner" value="True" checked/>
                         <div class="slider round"></div>
                     </label>
                     <p>Cleaner</p>
                 </div>
                 <div>
                     <label class="switch" for="checkbox3">
-                        <input type="checkbox" id="checkbox3" name="state" value="analyser"/>
+                        <input type="checkbox" id="checkbox3" name="analyser" value="True" checked/>
                         <div class="slider round"></div>
                     </label>
                     <p>Analyser</p>
                 </div>
                 <div>
                     <label class="switch" for="checkbox4">
-                        <input type="checkbox" id="checkbox4" name="state" value="modeller"/>
+                        <input type="checkbox" id="checkbox4" name="modeller" value="True" checked/>
                         <div class="slider round"></div>
                     </label>
                     <p>Modeller</p>
                 </div>
                 <div>
                     <label class="switch" for="checkbox5">
-                        <input type="checkbox" id="checkbox5" name="state" value="labelling"/>
+                        <input type="checkbox" id="checkbox5" name="labelling" value="True" checked/>
                         <div class="slider round"></div>
                     </label>
                     <p>Labelling</p>
                 </div>
                 <div>
                     <label class="switch" for="checkbox6">
-                        <input type="checkbox" id="checkbox6" name="state" value="classifier"/>
+                        <input type="checkbox" id="checkbox6" name="classifier" value="False" disabled/>
                         <div class="slider round"></div>
                     </label>
                     <p>Classifier</p>
